<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chagnahnn.spotube.ui.screen.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shorts"
        android:name="com.chagnahnn.spotube.ui.screen.shorts.ShortsFragment"
        android:label="@string/title_shorts"
        tools:layout="@layout/fragment_shorts" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.chagnahnn.spotube.ui.screen.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.chagnahnn.spotube.ui.screen.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />
</navigation>